use kaiware-lib

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Kaiware Test Client</title>
-		<script src="./script.js" defer></script>
+		<script src="./first.js"></script>
+		<script src="./index.ts" defer></script>
 		<link rel="stylesheet" href="./styles.css" />
 	</head>
 	<body>
 		<button id="send-log-info">Send Info Log</button>
 		<button id="send-log-warn">Send Warning Log</button>
 		<button id="send-log-error">Send Error Log</button>
-		<button id="send-device-info">Update Device Info</button>
 		<button id="add-element">Add HTML Element</button>
 	</body>
 </html>
